<resources>
    <string name="app_name">CatsApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_breeds">Breeds</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_search">Images/Search</string>
    <string name="title_upload">Upload</string>
<!--  Vote Fragment  -->
    <string name="title_vote">Vote</string>
    <string name="button_love">Love It</string>
    <string name="button_nope">Nope It</string>
</resources>
